--- a/app/globals.css
+++ b/app/globals.css
@@ -19,8 +19,80 @@
   }
 }
 
+.btn-primary-theme {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #435860;
+  --bs-btn-border-color: #435860;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #344552;
+  /* Adjusted hover background color */
+  --bs-btn-hover-border-color: #2c3b4d;
+  /* Adjusted hover border color */
+  --bs-btn-focus-shadow-rgb: 67, 88, 96;
+  /* Adjusted focus shadow color */
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #2c3b4d;
+  /* Adjusted active background color */
+  --bs-btn-active-border-color: #273640;
+  /* Adjusted active border color */
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #435860;
+  --bs-btn-disabled-border-color: #435860;
+}
+
+.btn-white-theme {
+  --bs-btn-color: #30454c;
+  --bs-btn-bg: #fff;
+  --bs-btn-border-color: #9fabaf;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #e0e0e0;
+  /* Adjusted hover background color */
+  --bs-btn-hover-border-color: #ccc;
+  /* Adjusted hover border color */
+  --bs-btn-focus-shadow-rgb: 255, 255, 255;
+  /* Adjusted focus shadow color */
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #ccc;
+  /* Adjusted active background color */
+  --bs-btn-active-border-color: #bbb;
+  /* Adjusted active border color */
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #fff;
+  --bs-btn-disabled-border-color: #fff;
+}
+
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.input_select_tab_small .rmsc {
+  --rmsc-h: 32px !important;
+}
+
+.input_select_tab_disabled .rmsc {
+  --rmsc-bg: var(--disabled-input-bg) !important;
+  opacity: var(--disabled-input-opacity);
+}
+div:has(> .expand-multiple-select-dropdown [aria-expanded="true"]) {
+  min-height: 260px !important;
+}
+.input-searchable-select-error .rmsc .dropdown-container {
+  border-color: #dc3545 !important;
+}
+.input_select_tab_disabled2 {
+  background-color: rgb(212, 212, 212) !important;
+  opacity: 0.6 !important;
+}
+
+.input-searchable-select-error .rmsc .dropdown-container {
+  border-color: #dc3545 !important;
+}
+
+.dropdown-container {
+  overflow: visible;
 }
