--- a/app/globals.css
+++ b/app/globals.css
@@ -78,12 +78,15 @@ body {
   --rmsc-bg: var(--disabled-input-bg) !important;
   opacity: var(--disabled-input-opacity);
 }
+
 div:has(> .expand-multiple-select-dropdown [aria-expanded="true"]) {
   min-height: 260px !important;
 }
+
 .input-searchable-select-error .rmsc .dropdown-container {
   border-color: #dc3545 !important;
 }
+
 .input_select_tab_disabled2 {
   background-color: rgb(212, 212, 212) !important;
   opacity: 0.6 !important;
@@ -97,6 +100,17 @@ div:has(> .expand-multiple-select-dropdown [aria-expanded="true"]) {
   overflow: visible;
 }
 
+.multi-select-input .rmsc .dropdown-container {
+  height: 35px !important;
+  background-color: #f5f5f5 !important;
+  border: none !important;
+
+}
+
+.multi-select-input .rmsc .dropdown-heading {
+  height: 35px !important;
+
+}
 
 /* This will override the z-index for top-right position */
 .Toastify__toast-container--top-right {
